--- a/work/DocotChit/DocotChit/DocotChit.Android/DocotChit.Android.csproj
+++ b/work/DocotChit/DocotChit/DocotChit.Android/DocotChit.Android.csproj
@@ -101,6 +101,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DocotService.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
