--- a/work/DocotChit/DocotChit/DocotChit.Android/DocotChit.Android.csproj
+++ b/work/DocotChit/DocotChit/DocotChit.Android/DocotChit.Android.csproj
@@ -117,10 +117,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DocotService.cs" />
+    <Compile Include="DocotServiceConnection.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="MainApplication.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceConnectionStubAndroid.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
