--- a/work/DocotChit/DocotChit/DocotChit.Android/packages.config
+++ b/work/DocotChit/DocotChit/DocotChit.Android/packages.config
@@ -6,7 +6,7 @@
   <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="monoandroid60" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
-  <package id="Plugin.Permissions" version="1.1.7" targetFramework="monoandroid60" />
+  <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid60" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid60" />
@@ -54,6 +54,7 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Xam.Plugin.Geolocator" version="3.0.4" targetFramework="monoandroid60" />
+  <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
